--- a/IHM/IHM/App.xaml
+++ b/IHM/IHM/App.xaml
@@ -7,7 +7,10 @@
             <Color x:Key="corTransistorOutput">#00416B</Color>
         </ResourceDictionary>
         <ResourceDictionary>
-            <Color x:Key="corDigitalInput">Gray</Color>
+            <Color x:Key="corDigitalInput">#FF696969</Color>
+        </ResourceDictionary>
+        <ResourceDictionary>
+            <Color x:Key="corAnalogicaInput">#FF008080</Color>
         </ResourceDictionary>
         <ResourceDictionary>
             <Color x:Key="corLabelTransistorOutput">White</Color>
