--- a/IHM/IHM/Views/ViewDigitalInput.xaml
+++ b/IHM/IHM/Views/ViewDigitalInput.xaml
@@ -73,20 +73,29 @@
                                     </FormattedString>
                                 </Label.FormattedText>
                             </Label>
-                           
-                            <Image Grid.Row="0"
-                                   Grid.RowSpan="3"
-                                   Grid.Column="2"
-                                  Source="transistor_icone.png">
-                            </Image>
+                            <Frame 
+                                Grid.Row="0"
+                                Grid.RowSpan="1"
+                                Grid.Column="2"
+                                CornerRadius="5"
+                                BackgroundColor="White"
+                                HasShadow="true">
+                                <Label VerticalOptions="CenterAndExpand"
+                                       HorizontalOptions="CenterAndExpand"
+                                       FontAttributes="Bold"
+                                       TextColor="Black"
+                                       FontSize="Large"
+                                       Text="{Binding Nome}"/>
+                            </Frame>
                         </Grid>
                     </Grid>
-
                     <BoxView Grid.Row="1"
                              BackgroundColor="{Binding Path= BorderColor,
                              Source={x:Reference viewDigitalInput}}"
                              HeightRequest="2"
                              HorizontalOptions="Fill"/>
+                    
+
                 </Grid>
             </Frame>
         </StackLayout>
